# smash-it

./: .gitignore  README.md
arduino_nano/: joystick.c
esp8266/: forward_data  forward_data_V2
pico/: CMakeLists.txt  data_handling.c
ros2/src/new_ball/: package.xml  setup.cfg  setup.py
ros2/src/new_ball/description/: ball.xacro  template.xacro
ros2/src/new_ball/launch/: rsp.launch.py
ros2/src/new_ball/new_ball/: calc_trajectory.py  random_spawn.py  random_spawn_v2.py
ros2/src/test_bot/: CMakeLists.txt  package.xml  temp_controller_info.txt
ros2/src/test_bot/config/: my_controllers_1.yaml  my_controllers_diff_drive.yaml  my_controllers_mec.yaml
ros2/src/test_bot/description/: arm2_core.xacro  mec_robot_core.xacro  robot.urdf.xacro  ros2_control.xacro
ros2/src/test_bot/description/additional/: copy_new_robot_core.xacro  copy_new_robot_core_backup1.xacro  mec_robot_core.xacro  new_robot_core.xacro  robot_core.xacro
ros2/src/test_bot/launch/: launch_sim (copy).launch.py  launch_sim.launch.py
ros2/src/test_bot/src/: control.cpp  control_v2.cpp  play (backup).cpp  play.cpp  play_basic.cpp  play_v2 (backup).cpp  play_v2.cpp  play_v3.cpp  quintic_play.cpp
ros2/src/test_bot/worlds/: base.world  original.world  working.world  world_1.world
ros_2/src/nano_controller/: CMakeLists.txt  package.xml
ros_2/src/nano_controller/src/: talker.cpp
ros_2/src/smash_it/: CMakeLists.txt  package.xml  smash_it.xml
ros_2/src/smash_it/bringup/config/: smashit_controllers.yaml
ros_2/src/smash_it/bringup/launch/: smashit.launch.py
ros_2/src/smash_it/description/ros2_control/: smashit.ros2_control.xacro
ros_2/src/smash_it/description/urdf/: inertial_macros.xacro  smashit.urdf.xacro  smashit_description.urdf.xacro
ros_2/src/smash_it/hardware/: smashit_system.cpp
ros_2/src/smash_it/hardware/include/smash_it/: serial_comm.hpp  serial_comm_wifi.hpp  smashit_system.hpp
ros_2/src/smash_it/src/: play.cpp
